--- a/unit-four/books_app/frontend/src/css/App.css
+++ b/unit-four/books_app/frontend/src/css/App.css
@@ -1,3 +1,20 @@
+/* //My OWN CSS */
+
+h1,h2,h3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+
+
+
+
+
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +52,160 @@
   to {
     transform: rotate(360deg);
   }
+} 
+
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
+
+.App {
+  text-align: center;
 }
+
+label {
+  display: block;
+  margin-top: 10px;
+}
+.card-container.card {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 350px !important;
+  padding: 40px 40px;
+  border-color: blue;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #f7f7f7;
+  padding: 20px 25px 30px;
+  margin: 0 auto 25px;
+  margin-top: 50px;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-box-shadow: 0px 2px 2px rgba(255, 0, 0, 1);
+  -webkit-box-shadow: 0px 2px 2px rgba(255, 0, 0, 1);
+  box-shadow: 0px 2px 2px rgba(255, 0, 0, 1);
+}
+.profile-img-card {
+  width: 96px;
+  height: 96px;
+  margin: 0 auto 10px;
+  display: block;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+
+
+
+
+
+.navbar-brand, .nav-link, .nav-item, .card, input[type="text"], #all-info{
+  font-family: 'Raleway', sans-serif;
+}
+
+.navbar-brand{
+  font-weight: 800;
+}
+
+.navbar-light{
+  background-color: rgb(91, 200, 236);
+}
+
+.api-card{
+  height: 400px;
+}
+
+.api-img{
+  height: 175px;
+}
+
+.container{
+  margin-bottom: 100px;
+}
+
+.api-title{
+  font-family: 'Raleway', sans-serif;
+  font-weight: bolder;
+  text-align: center;
+  margin-top: 40px;
+}
+
+.addCal-btn{
+  margin-top: 150px;
+  margin-bottom: 50px;
+  width: 60%;
+  margin: 0 auto;
+  color: rgb(5, 96, 126);
+}
+
+.event-content{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.column {
+  flex: 50%;
+  text-align: center;
+}
+
+.api-event-img{
+  height: 400px;
+  width: 500px;
+  padding: 10px;
+  border: 4px solid rgb(198, 228, 234);
+  border-radius: 25px;
+}
+
+.event-header{
+  font-weight: bold;
+  font-size: 25px;
+  color:rgb(44,90,101);
+  margin-bottom: 50px;
+}
+
+.cal-card{
+  height: 225px;
+  text-align: center;
+  position: relative
+}
+
+.btn-cal, .link-btn{
+  background-color: rgb(91, 200, 236);
+  border-radius: 25px;
+  border: none;
+  width: 200px;
+  color: white;
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+a.link:hover, .btn-cal:hover{ 
+  text-decoration: none; 
+  color: blue;
+} 
+
+a.link{
+  color: white;
+}
+
+
+
+
+#update{
+  position: absolute;
+  bottom: 15px;
+  left: 100px;
+}
+
+#delete{
+  position: absolute;
+  bottom: 5px;
+  left: 135px;
+  width: 134px;
+} 
