--- a/unit-four/books_app/frontend/src/css/App.css
+++ b/unit-four/books_app/frontend/src/css/App.css
@@ -1,79 +1,34 @@
 /* //My OWN CSS */
-
-h1,h2,h3 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-}
-
-
-
-
-
-
-
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} 
-
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800&display=swap');
 
-.App {
-  text-align: center;
+
+
+h1,h2,h3,h4 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
 }
 
-label {
-  display: block;
-  margin-top: 10px;
+.book-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f7f7f7;
+
 }
 .card-container.card {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   max-width: 350px !important;
   padding: 40px 40px;
   border-color: blue;
 }
+
 .card {
   display: flex;
   flex-direction: column;
@@ -100,9 +55,6 @@ label {
 }
 
 
-
-
-
 .navbar-brand, .nav-link, .nav-item, .card, input[type="text"], #all-info{
   font-family: 'Raleway', sans-serif;
 }
@@ -115,97 +67,9 @@ label {
   background-color: rgb(91, 200, 236);
 }
 
-.api-card{
-  height: 400px;
-}
-
-.api-img{
-  height: 175px;
-}
-
-.container{
-  margin-bottom: 100px;
-}
-
-.api-title{
-  font-family: 'Raleway', sans-serif;
-  font-weight: bolder;
-  text-align: center;
-  margin-top: 40px;
-}
-
-.addCal-btn{
-  margin-top: 150px;
-  margin-bottom: 50px;
-  width: 60%;
-  margin: 0 auto;
-  color: rgb(5, 96, 126);
-}
-
-.event-content{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-.column {
-  flex: 50%;
-  text-align: center;
-}
-
-.api-event-img{
-  height: 400px;
-  width: 500px;
-  padding: 10px;
-  border: 4px solid rgb(198, 228, 234);
-  border-radius: 25px;
-}
-
-.event-header{
-  font-weight: bold;
-  font-size: 25px;
-  color:rgb(44,90,101);
-  margin-bottom: 50px;
-}
-
-.cal-card{
-  height: 225px;
-  text-align: center;
-  position: relative
-}
-
-.btn-cal, .link-btn{
-  background-color: rgb(91, 200, 236);
-  border-radius: 25px;
-  border: none;
-  width: 200px;
-  color: white;
-  margin-top: 10px;
-  font-weight: bold;
-}
-
-a.link:hover, .btn-cal:hover{ 
-  text-decoration: none; 
-  color: blue;
-} 
-
-a.link{
-  color: white;
-}
 
 
 
 
-#update{
-  position: absolute;
-  bottom: 15px;
-  left: 100px;
-}
 
-#delete{
-  position: absolute;
-  bottom: 5px;
-  left: 135px;
-  width: 134px;
-} 
+
